# unicode-data

./: .gitignore  .hlint.ignore  .packcheck.ignore  Changelog.md  LICENSE  NOTICE  README.md  appveyor.yml  cabal.project  download-ucd.sh  run-ucd2haskell.sh  stack.yaml  ucd.sh  unicode-data.cabal  update-versions.sh
.circleci/: config.yml
.github/workflows/: haskell.yml  s390x.yml
bench/: Main.hs
exe/: Common.hs  DerivedCoreProperties.hs  UCD2Haskell.hs  UnicodeData.hs
exe/Parser/: Text.hs  XML.hs
experimental/icu/: icu.cabal
experimental/icu/cbits/: icu.c  icu.h
experimental/icu/lib/ICU/: Char.chs  Char.hsc  Names.hsc  Scripts.hsc
experimental/icu/lib/ICU/Names/: Text.hsc
experimental/unicode-data-text/: README.md  unicode-data-text.cabal
experimental/unicode-data-text/bench/: Main.hs
experimental/unicode-data-text/lib/Unicode/Text/: Case.hs
experimental/unicode-data-text/test/Unicode/Text/: CaseSpec.hs
lib/Data/Unicode/Internal/: Bits.hs  Division.hs
lib/Data/Unicode/Internal/Properties/: Compositions.hs  Decomposable.hs  DecomposableK.hs  Decompositions.hs  DecompositionsK.hs  DecompositionsK2.hs
lib/Data/Unicode/Properties/: CombiningClass.hs  Compositions.hs  Core.hs  Decomposable.hs  DecomposableK.hs  Decompose.hs  DecomposeHangul.hs  Decompositions.hs  DecompositionsK.hs  DecompositionsK2.hs
lib/Unicode/: Char.hs
lib/Unicode/Char/: Case.hs  General.hs  Identifiers.hs  Normalization.hs  Numeric.hs
lib/Unicode/Char/Case/: Compat.hs
lib/Unicode/Char/General/: Compat.hs
lib/Unicode/Char/Numeric/: Compat.hs
lib/Unicode/Internal/: Bits.hs  Division.hs
lib/Unicode/Internal/Char/: DerivedCoreProperties.hs  DerivedNormalizationProperties.hs  PropList.hs
lib/Unicode/Internal/Char/UnicodeData/: Compositions.hs  (+10 more)
lib/Unicode/Internal/Properties/: Compositions.hs  Decomposable.hs  DecomposableK.hs  Decompositions.hs  DecompositionsK.hs  DecompositionsK2.hs
lib/Unicode/Properties/: CombiningClass.hs  Compose.hs  Core.hs  Decompose.hs  DecomposeHangul.hs  Hangul.hs
lib/Unicode/UCD/: CombiningClass.hs  Compose.hs  Core.hs  Decompose.hs  Hangul.hs
test/Unicode/: CharSpec.hs
ucd2haskell/: README.md  ucd2haskell.cabal
ucd2haskell/exe/: Prelude.hs  UCD2Haskell.hs
ucd2haskell/exe/Parser/: Text.hs
ucd2haskell/exe/UCD2Haskell/: Common.hs  Generator.hs
ucd2haskell/exe/UCD2Haskell/Generator/: Core.hs  Names.hs  Scripts.hs  Security.hs
ucd2haskell/exe/UCD2Haskell/Modules/: Blocks.hs  CaseFoldings.hs  DerivedNumericValues.hs  Properties.hs  Scripts.hs  ScriptsExtensions.hs  SpecialCasings.hs  Version.hs
ucd2haskell/exe/UCD2Haskell/Modules/Security/: Confusables.hs  IdentifierStatus.hs  IdentifierType.hs  IntentionalConfusables.hs
ucd2haskell/exe/UCD2Haskell/Modules/UnicodeData/: CombiningClass.hs  Composition.hs  Decomposition.hs  DerivedNames.hs  GeneralCategory.hs  NameAliases.hs  SimpleCaseMappings.hs
ucd2haskell/test/: Main.hs  generate_all_chars.py
ucd2haskell/test/Unicode/: CharSpec.hs
unicode-data/: Changelog.md  NOTICE  README.md  unicode-data.cabal
unicode-data-core/: Changelog.md  NOTICE  README.md  unicode-data-core.cabal
unicode-data-core/bench/: Main.hs
unicode-data-core/lib/Unicode/: Char.hs
unicode-data-core/lib/Unicode/Char/: Case.hs  General.hs  Numeric.hs
unicode-data-core/lib/Unicode/Internal/: Division.hs  Unfold.hs
unicode-data-core/test/Unicode/: CharSpec.hs
unicode-data-names/: Changelog.md  README.md  unicode-data-names.cabal
unicode-data-names/bench/: Main.hs
unicode-data-names/lib/ICU/: Names.hsc
unicode-data-names/test/: Main.hs  check.py  export_all_chars.hs
unicode-data-names/test/ICU/: NamesSpec.hs
unicode-data-scripts/: Changelog.md  README.md  unicode-data-scripts.cabal
unicode-data-scripts/bench/: Main.hs
unicode-data-scripts/cbits/: icu.c  icu.h
unicode-data-scripts/lib/ICU/: Scripts.hsc
unicode-data-scripts/lib/Unicode/Char/General/: Scripts.hs
unicode-data-scripts/lib/Unicode/Internal/Bits/: Scripts.hs
unicode-data-scripts/lib/Unicode/Internal/Char/: ScriptExtensions.hs  Scripts.hs
unicode-data-scripts/lib/Unicode/Internal/Char/Scripts/: Version.hs
unicode-data-scripts/test/: Main.hs
unicode-data-scripts/test/ICU/: ScriptsSpec.hs
unicode-data-scripts/test/Unicode/Char/General/: ScriptsSpec.hs
unicode-data-scripts/test/Unicode/Char/General/Scripts/: ICUSpec.hs
unicode-data-security/: Changelog.md  README.md  unicode-data-security.cabal
unicode-data-security/bench/: Main.hs
unicode-data-security/test/: Main.hs
unicode-data/bench/: Main.hs
unicode-data/bench/Text/: Case.hs
unicode-data/bench/Unicode/Char/: Bench.hs  CaseBench.hs  GeneralBench.hs  IdentifiersBench.hs  NormalizationBench.hs  NumericBench.hs
unicode-data/bench/Unicode/Char/Case/: CompatBench.hs
unicode-data/bench/Unicode/Char/General/: BlocksBench.hs  CompatBench.hs
unicode-data/bench/Unicode/Char/Numeric/: CompatBench.hs
unicode-data/exe/: UCD2Haskell.hs
unicode-data/exe/Parser/: Text.hs
unicode-data/lib/Unicode/: Char.hs
unicode-data/lib/Unicode/Char/: Case.hs  General.hs  Identifiers.hs  Normalization.hs  Numeric.hs  Segmentation.hs
unicode-data/lib/Unicode/Char/Case/: Compat.hs
unicode-data/lib/Unicode/Char/General/: Blocks.hs  Compat.hs  Scripts.hs
unicode-data/lib/Unicode/Char/Numeric/: Compat.hs
unicode-data/lib/Unicode/Internal/: Bits.hs  Char.hs  Division.hs  Unfold.hs
unicode-data/lib/Unicode/Internal/Char/: Blocks.hs  CaseFolding.hs  DerivedCoreProperties.hs  DerivedNumericValues.hs  GraphemeBreak.hs  PropList.hs  Scripts.hs  Version.hs
unicode-data/lib/Unicode/Internal/Char/SpecialCasing/: LowerCaseMapping.hs  TitleCaseMapping.hs  UpperCaseMapping.hs
unicode-data/lib/Unicode/Internal/Char/UnicodeData/: CombiningClass.hs  Compositions.hs  Decomposable.hs  DecomposableK.hs  Decompositions.hs  DecompositionsK.hs  DecompositionsK2.hs  GeneralCategory.hs  SimpleLowerCaseMapping.hs  SimpleTitleCaseMapping.hs  SimpleUpperCaseMapping.hs
unicode-data/test/: Main.hs
unicode-data/test/ICU/: CharSpec.hs
unicode-data/test/Unicode/: CharSpec.hs
(+31 files in other folders)
