cabal-version:       2.2
name:                unicode-data
version:             0.1.0
synopsis:            Access Unicode character database
description:         A low level package providing efficient access to the
                     unicode database.
homepage:            http://github.com/composewell/unicode-data
bug-reports:         https://github.com/composewell/unicode-data/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies and Contributors
maintainer:          streamly@composewell.com
copyright:           2020 Composewell Technologies and Contributers
category:            Data,Text,Unicode
stability:           Experimental
build-type:          Simple
tested-with:         GHC==8.2.2
                   , GHC==8.6.5
                   , GHC==8.8.3

extra-source-files:
    .github/workflows/haskell.yml
    .gitignore
    .hlint.ignore
    Changelog.md
    README.md
    NOTICE
    download-ucd.sh
    run-ucd2haskell.sh

source-repository head
  type: git
  location: https://github.com/composewell/unicode-data

flag ucd2haskell
  description: Build the ucd2haskell executable
  manual: True
  default: False

common default-extensions
  default-extensions:
      BangPatterns
      DeriveGeneric
      MagicHash
      RecordWildCards
      ScopedTypeVariables
      TupleSections

      -- Experimental, may lead to issues
      DeriveAnyClass
      TemplateHaskell
      UnboxedTuples

common compile-options
  ghc-options: -Wall
               -fwarn-identities
               -fwarn-incomplete-record-updates
               -fwarn-incomplete-uni-patterns
               -fwarn-tabs

library
  import: default-extensions, compile-options
  default-language: Haskell2010
  exposed-modules:
      Data.Unicode.Internal.Bits
      Data.Unicode.Internal.Division
      Data.Unicode.Properties.CombiningClass
      Data.Unicode.Properties.Compositions
      Data.Unicode.Properties.Decomposable
      Data.Unicode.Properties.DecomposableK
      Data.Unicode.Properties.Decompose
      Data.Unicode.Properties.DecomposeHangul
      Data.Unicode.Properties.Decompositions
      Data.Unicode.Properties.DecompositionsK
      Data.Unicode.Properties.DecompositionsK2
      Data.Unicode.Properties.Core
  hs-source-dirs: lib
  ghc-options: -O2
  build-depends:
      base >=4.7 && <5

executable ucd2haskell
  import: default-extensions, compile-options
  default-language: Haskell2010
  ghc-options: -O2
  hs-source-dirs: exe
  main-is: UCD2Haskell.hs
  other-modules: Parser.Text
  build-depends:
      base             >= 4    && < 5
    , streamly         >= 0.7  && < 0.8
    , getopt-generics  >= 0.13 && < 0.14
    , containers       >= 0.5  && < 0.7
  if flag(ucd2haskell)
    buildable: True
  else
    buildable: False
