cabal-version:       2.2
name:                ucd2haskell
version:             0.4.0
synopsis:            Generate the code of the unicode-data* packages
description:
    Internal package for the generation of @unicode-data*@ packages.
homepage:            http://github.com/composewell/unicode-data
bug-reports:         https://github.com/composewell/unicode-data/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies and Contributors
maintainer:          streamly@composewell.com
copyright:           2020 Composewell Technologies and Contributors
category:            Data,Text,Unicode
stability:           Experimental
build-type:          Simple
tested-with:         GHC==8.0.2
                   , GHC==8.2.2
                   , GHC==8.4.4
                   , GHC==8.6.5
                   , GHC==8.8.4
                   , GHC==8.10.7
                   , GHC==9.0.1
                   , GHC==9.2.1
                   , GHC==9.4.2
                   , GHC==9.6.0

extra-source-files:
    README.md
    NOTICE
data-dir: data

source-repository head
  type: git
  location: https://github.com/composewell/unicode-data

flag ucd2haskell
  description: Build the ucd2haskell executable
  manual: True
  default: False

common default-extensions
  default-extensions:
      BangPatterns
      DeriveGeneric
      MagicHash
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      FlexibleContexts

      -- Experimental, may lead to issues
      DeriveAnyClass
      TemplateHaskell
      UnboxedTuples

common compile-options
  ghc-options: -Wall
               -fwarn-identities
               -fwarn-incomplete-record-updates
               -fwarn-incomplete-uni-patterns
               -fwarn-tabs
  default-language: Haskell2010

executable ucd2haskell
  import: default-extensions, compile-options
  default-language: Haskell2010
  ghc-options: -O2
  hs-source-dirs: exe
  main-is: UCD2Haskell.hs
  other-modules: Parser.Text
  if flag(ucd2haskell)
    buildable: True
    build-depends:
        base             >= 4.7   && < 4.19
      , containers       >= 0.5   && < 0.7
      , directory        >= 1.3.6 && < 1.4
      , filepath         >= 1.4.100 && < 1.5
      , getopt-generics  >= 0.13  && < 0.14
      , streamly         >= 0.8.0 && < 0.8.1
  else
    buildable: False

executable test
  import: default-extensions, compile-options
  default-language: Haskell2010
  ghc-options: -O2
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Unicode.CharSpec
    Paths_ucd2haskell
  autogen-modules:
    Paths_ucd2haskell
  if flag(ucd2haskell)
    buildable: True
    build-depends:
        base             >= 4.7   && < 4.19
      , directory        >= 1.3.6 && < 1.4
      , filepath         >= 1.4.100 && < 1.5
      , hspec            >= 2.0   && < 2.11
      , HUnit            >= 1.6.2 && < 1.7
      , split            >= 0.2.3 && < 0.3
      , unicode-data
  else
    buildable: False
