cabal-version:       2.2
name:                unicode-data-scripts
version:             0.3.0
synopsis:            Unicode characters scripts
description:
  @unicode-data-scripts@ provides Haskell APIs to access the Unicode
  character <https://www.unicode.org/reports/tr24/ scripts> from the
  <https://www.unicode.org/ucd/ Unicode character database> (UCD).
  .
  The Haskell data structures are generated programmatically from the UCD files.
  The latest Unicode version supported by this library is
  @<https://www.unicode.org/versions/Unicode15.0.0/ 15.0.0>@.
homepage:            http://github.com/composewell/unicode-data
bug-reports:         https://github.com/composewell/unicode-data/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies and Contributors
maintainer:          dev@wismill.eu
copyright:           2022 Composewell Technologies and Contributors
category:            Data,Text,Unicode
stability:           Experimental
build-type:          Simple
tested-with:         GHC==8.0.2
                   , GHC==8.2.2
                   , GHC==8.4.4
                   , GHC==8.6.5
                   , GHC==8.8.4
                   , GHC==8.10.7
                   , GHC==9.0.2
                   , GHC==9.2.6
                   , GHC==9.4.4
                   , GHC==9.6.0

extra-source-files:
    Changelog.md
    README.md

source-repository head
  type: git
  location: https://github.com/composewell/unicode-data

common default-extensions
  default-extensions:
      BangPatterns
      DeriveGeneric
      MagicHash
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      FlexibleContexts
      LambdaCase

      -- Experimental, may lead to issues
      DeriveAnyClass
      TemplateHaskell
      UnboxedTuples

common compile-options
  ghc-options: -Wall
               -fwarn-identities
               -fwarn-incomplete-record-updates
               -fwarn-incomplete-uni-patterns
               -fwarn-tabs
  default-language: Haskell2010

flag has-icu
  description: Use ICU for test and benchmark
  manual: True
  default: False

library
  import: default-extensions, compile-options
  exposed-modules:
      -- The module structure is derived from
      -- https://www.unicode.org/reports/tr44/#Property_Index_Table
      Unicode.Char.General.Scripts

      -- Internal files
      Unicode.Internal.Bits.Scripts

      -- Generated files
      -- This module structure is largely based on the UCD file names from which
      -- the properties are generated.
      Unicode.Internal.Char.Scripts
      Unicode.Internal.Char.ScriptExtensions
  hs-source-dirs: lib
  build-depends:
      base             >= 4.7   && < 4.19
  -- Support for raw string literals unpacking is included in base ≥ 4.15
  if impl(ghc < 9.0.0)
    build-depends:
      ghc-prim >= 0.3.1 && < 1.0

-- Internal library to enable comparison to ICU
library icu-scripts
  import: default-extensions, compile-options
  if flag(has-icu)
    buildable: True
  else
    buildable: False
  exposed-modules:
    ICU.Scripts
  hs-source-dirs: lib
  build-depends:
      base             >= 4.7   && < 4.19
  include-dirs: cbits
  c-sources: cbits/icu.c
  cc-options: -Wall -Wextra -pedantic
  if os(darwin)
    extra-lib-dirs:
      /usr/local/opt/icu4c/lib
      /opt/homebrew/opt/icu4c/lib
    include-dirs:
      /usr/local/opt/icu4c/include
      /opt/homebrew/opt/icu4c/include
  extra-libraries: icuuc
  pkgconfig-depends:
    icu-uc

test-suite test
  import: default-extensions, compile-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  other-modules:
      Unicode.Char.General.ScriptsSpec
  build-depends:
      base             >= 4.7   && < 4.19
    , hspec            >= 2.0   && < 2.11
    , unicode-data-scripts
  if flag(has-icu)
    other-modules:
        Unicode.Char.General.Scripts.ICUSpec
    build-depends:
      icu-scripts
    cpp-options: -DHAS_ICU

benchmark bench
  import: default-extensions, compile-options
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
    base        >= 4.7   && < 4.19,
    deepseq     >= 1.1   && < 1.5,
    tasty-bench >= 0.2.5 && < 0.4,
    tasty       >= 1.4.1,
    unicode-data-scripts
  ghc-options: -O2 -fdicts-strict -rtsopts -with-rtsopts=-A32m
  if impl(ghc >= 8.6)
    ghc-options: -fproc-alignment=64
  if flag(has-icu)
    build-depends:
      icu-scripts
    cpp-options: -DHAS_ICU
