cabal-version:       2.2
name:                unicode-data-text
version:             0.1.0
synopsis:            Unicode features for “text” package
description:
  @unicode-data-text@ provides Unicode features from
  <https://hackage.haskell.org/package/unicode-data unicode-data> package
  for the <https://hackage.haskell.org/package/text text> package.
homepage:            http://github.com/composewell/unicode-data
bug-reports:         https://github.com/composewell/unicode-data/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies and Contributors
maintainer:          dev@wismill.eu
copyright:           2022 Composewell Technologies and Contributors
category:            Data,Text,Unicode
stability:           Experimental
build-type:          Simple
tested-with:         GHC==8.0.2
                   , GHC==8.2.2
                   , GHC==8.4.4
                   , GHC==8.6.5
                   , GHC==8.8.4
                   , GHC==8.10.7
                   , GHC==9.0.2
                   , GHC==9.2.6
                   , GHC==9.4.4

extra-source-files:
    Changelog.md
    README.md

source-repository head
  type: git
  location: https://github.com/composewell/unicode-data

common default-extensions
  default-extensions:
      BangPatterns
      DeriveGeneric
      MagicHash
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      FlexibleContexts
      LambdaCase

      -- Experimental, may lead to issues
      DeriveAnyClass
      TemplateHaskell
      UnboxedTuples

common compile-options
  ghc-options: -Wall
               -fwarn-identities
               -fwarn-incomplete-record-updates
               -fwarn-incomplete-uni-patterns
               -fwarn-tabs
  default-language: Haskell2010

library
  import: default-extensions, compile-options
  default-language: Haskell2010
  exposed-modules:
    Unicode.Text.Case

  hs-source-dirs: lib
  build-depends:
    base             >= 4.7   && < 4.19,
    text             >= 1.2.4 && < 2.1,
    unicode-data     >= 0.3   && < 0.5

test-suite test
  import: default-extensions, compile-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    test
  other-modules:
    Unicode.Text.CaseSpec
  build-depends:
    base             >= 4.7   && < 4.19,
    hspec            >= 2.0   && < 2.11,
    text             >= 1.2.4 && < 2.1,
    unicode-data-text
  build-tool-depends:
    hspec-discover:hspec-discover >= 2.0 && < 2.11
  if impl(ghc >= 9.5.1)
    cpp-options: -DCOMPATIBLE_GHC_UNICODE
  default-language: Haskell2010

benchmark bench
  import: default-extensions, compile-options
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
    base             >= 4.7   && < 4.19,
    deepseq          >= 1.1   && < 1.5,
    tasty-bench      >= 0.2.5 && < 0.4,
    tasty            >= 1.4.1,
    text             >= 1.2.4 && < 2.1,
    unicode-data     >= 0.3   && < 0.5,
    unicode-data-text
  ghc-options: -O2 -fdicts-strict -rtsopts
